refactor run cycle demo and wiggly tentacle to use regular javascript instead of p5.js

--- a/fkTentacle.html
+++ b/fkTentacle.html
@@ -22,9 +22,13 @@
 		}
 		canvas {
 			margin:auto;
+			position: absolute;
+			top: 0px;
+			left: 0px;
 		}
 	</style>
 </head>
 <body>
+	<canvas id="canvas"></canvas>
 </body>
 </html>
