--- a/runCycle.html
+++ b/runCycle.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,15 +17,42 @@
 
 	<style>
 		body {
-			margin:0;
-			padding:0;
+			margin: 0;
+			padding: 0;
 			overflow: hidden;
 		}
+
 		canvas {
-			margin:auto;
+			margin: auto;
+			position: absolute;
+			top: 0px;
+			left: 0px;
 		}
+		.slidecontainer {
+		position: absolute;
+		background-color: gray;
+		padding: 20px;
+		z-index: 1;
+		width: 140px;
+		font-family: sans-serif;
+	}
 	</style>
 </head>
+
 <body>
+	<canvas id="canvas"></canvas>
+	<div class="slidecontainer">
+		<h3>top center</h3>
+		<input id="topCenter" type="range" min="0" max="3.14" step="0.01" value="1.57" />
+		<h3>top range</h3>
+		<input id="topRange" type="range" min="0" max="1.57" step="0.01" value="0.77" />
+		<h3>bottom center</h3>
+		<input id="bottomCenter" type="range" min="0.5" max="1.5" step="0.01" value="0.87" />
+		<h3>bottom range</h3>
+		<input id="bottomRange" type="range" min="0" max="1.5" step="0.01" value="0.87" />
+		<h3>bottom phase offset</h3>
+		<input id="bottomPhase" type="range" min="0" max="3" step="0.01" value="1.5" />
+	</div>
 </body>
+
 </html>
