refactor the tentacle sketch to use perlin noise instead of random sin values

--- a/fkTentacle.html
+++ b/fkTentacle.html
@@ -13,6 +13,7 @@
 	<script src="fkTentacle-sketch.js"></script>
 	<script src="arm.js"></script>
 	<script src="fkSystem.js"></script>
+	<script src="perlin.js"></script>
 
 	<style>
 		body {
